--- a/register.html
+++ b/register.html
@@ -160,10 +160,10 @@
                                                     <div class="box--post_short_description">
                                                         <ol class="p" style="padding-left:15px;">
                                                             <li>
-                                                                Accumbens is on 12th & 13th June 2019 and Registration is splitted for both day, <a href="https://app.accumbens.in/process/day-one">Day 1 Registration</a> & <a href="https://app.accumbens.in/process/day-two">Day 2 Registration</a>
+                                                                Accumbens is on 12th & 13th June 2019 and Registration is splitted for both day, Day 1 Registration & Day 2 Registration
                                                             </li>
                                                             <li>
-                                                                Click on the <a href="https://app.accumbens.in/process/day-one">Day 1 Registration</a> or <a href="https://app.accumbens.in/process/day-two">Day 2 Registration</a> links added down.
+                                                                Click on the <a href="https://accumbens.in/closed.html">Day 1 Registration</a> or <a href="https://accumbens.in/closed.html>Day 2 Registration</a> links added down.
                                                             </li>
                                                             <li>
                                                                 Enter your basic information and Select the events which your going to participate. 
@@ -188,6 +188,8 @@
                                                         </ol>
                                                         <p><b>Any Queries</b></p>
                                                         <p>Merlin : <a href="tel:+91 9962123571">+91 9962123571 </a><br/>Soloman : <a href="tel:+91 9497389450">+91 9497389450</a></p>
+                                                       <br>
+                                                       <p style="color:red"><b>Registration Closed</b></p>
                                                     </div>
                                                 </div>
                                          </div>
@@ -197,8 +199,6 @@
                              </section>
                         </section>
                         <div class="back--top_link">
-                            <div class="in"> <a href="https://app.accumbens.in/process/day-one">Day 1 Registration</a> <span class="back--top--link_line"> <span class="line--in"></span> </span></div>
-                            <div class="in"> <a href="https://app.accumbens.in/process/day-two">Day 2 Registration</a> <span class="back--top--link_line"> <span class="line--in"></span> </span></div>
                            <div class="in"> <a href="#">back to top</a> <span class="back--top--link_line"> <span class="line--in"></span> </span></div>
                         </div>
                         <span class="bottom--triger"></span>
